--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-// index.html
 <!DOCTYPE html>
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jednoduchá CI/CD Stránka</title>
+  <script defer src="main.js"></script>
 </head>
 <body>
   <h1>Ahoj ze světa CI/CD!</h1>
-  <p>Pokud tohle vidíš, nasazení bylo úspěšné.</p>
+  <p>Výsledek výpočtu: <span id="result">?</span></p>
 </body>
 </html>
